<resources>
    <string name="app_name">Producticity</string>
    <string name="alarm_notification_channel_name">alarm_notification_channel_name</string>
    <string name="timer_notification_channel_name">timer_notification_channel_name</string>
    <string name="tasks_dialog_title">Задачи</string>
    <string name="statistics_title">Статистика</string>
    <string name="settings">Настройки</string>
    <string name="set_break">Перерыв</string>
    <string name="timer">Таймер</string>
    <string name="city">Город</string>
    <string name="tasks">Задачи</string>
    <string name="notification">Уведомление</string>
    <string name="short_break">Короткий перерыв</string>
    <string name="long_break">Длинный перерыв</string>
    <string name="building_in_progress">Здание строится</string>
    <string name="in_notification_bar">В панель уведомлений</string>
    <string name="start_end_timer_sound">Звук запуска/окончания таймера</string>
    <string name="end_notifcation">Уведомление об окончании</string>
    <string name="todo">TODO</string>
    <string name="delete_afet24hours">Удалять задачу после 24 часов</string>
    <string name="task_dialog_edittext_hint">Что делаем ?</string>
    <string name="no_tasks">Нет задач</string>
    <string name="cancel">Отмена</string>
    <string name="stop">Остановить</string>
    <string name="are_u_sure">Вы точно хотите \n остановить?</string>
    <string name="timer_not_title">Ваше здание еще не построено</string>
    <string name="timer_not_subtitle">Здание построится в </string>
    <string name="success_not_title">Здание успешно построено</string>
    <string name="success_not_subtitle">Выберите время отдыха</string>

    <string name="day">День</string>
    <string name="week">Неделя</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>

    <string name="pomo">pomo</string>
    <string name="minute_short">мин</string>
    <string name="minute">минут</string>
    <string name="people_short">чел</string>

    <string name="pomo_verb">выполнено</string>
    <string name="minute_verb">продуктивности</string>
    <string name="people_verb">к населению</string>

    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="building_building">Здание строится</string>


    //TUTORIAL SCREEN
    <string name="first_tutor_title">Pomodoro таймер</string>
    <string name="second_tutor_title">Город продуктивности</string>
    <string name="third_tutor_title">ToDo лист</string>

    <string name="first_subtitle_title">Максимально сосредоточьтесь\nна работе или учебе</string>
    <string name="second_subtitle_title">Создайте свой личный город и\nследите за тенденцией\nпродуктивности</string>
    <string name="third_subtitle_title">Не отвлекаясь от работы\nдобавляй срочные задачи в\ntodo лист</string>

    <string name="last_tutor_btn_text">Начать новую жизнь</string>
    //////


    <string name="splashscreen_text">развивайся по-новому</string>
</resources>
