<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/settings_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/settings_toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            app:srcCompat="@drawable/arrow_left"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textColor="@color/totalwhite"
            android:textSize="19sp"
            tools:layout_editor_absoluteX="128dp"
            tools:layout_editor_absoluteY="50dp" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settings_block"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/totalwhite"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="30dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">

        <RelativeLayout
            android:id="@+id/settings_long_winnotif_block"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_long_startendsound_block">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:gravity="center_vertical"
                android:text="@string/end_notifcation"
                android:textColor="@color/black" />

            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/settings_long_winnotif_switch"
                android:layout_width="40dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                app:tbOffColor="@color/barcolor"
                app:tbOnColor="@color/blue" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_break"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/settings_short_break_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_break"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/settings_short_break_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="5 мин"
                android:textColor="@color/transoarent50_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_long_break_block"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/settings_short_break_block"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/long_break"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/settings_long_break_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="10 мин"
                android:textColor="@color/transoarent50_black" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/notification"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_long_break_block" />

        <RelativeLayout
            android:id="@+id/settings_long_notifbar_block"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:layout_editor_absoluteX="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:text="@string/in_notification_bar"
                android:textColor="@color/black" />

            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/settings_long_notifbar_switch"
                android:layout_width="40dp"
                app:tbOffColor="@color/barcolor"
                app:tbOnColor="@color/blue"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="right|end"
                android:text="Switch" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/settings_long_startendsound_block"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_long_notifbar_block">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:text="@string/start_end_timer_sound"
                android:textColor="@color/black" />

            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/settings_long_startendsound_switch"
                android:layout_width="40dp"
                app:tbOffColor="@color/barcolor"
                app:tbOnColor="@color/blue"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_long_deleteafter24_block"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:gravity="center_vertical"
                android:text="@string/delete_afet24hours"
                android:textColor="@color/black" />

            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/settings_long_deleteafter24_switch"
                android:layout_width="40dp"
                android:layout_height="24dp"
                app:tbOffColor="@color/barcolor"
                app:tbOnColor="@color/blue"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/todo"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_long_winnotif_block" />


    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>