<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearlayout12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_fragment_image">

        <TextView
            android:id="@+id/tutorial_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/first_tutor_title"
            android:textColor="@color/totalwhite"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tutorial_fragment_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/first_subtitle_title"
            android:textColor="@color/totalwhite"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/tutorial_fragment_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img1"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearlayout13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout12">

        <TextView
            android:id="@+id/tutorial_fragment_skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="24dp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="@color/totalwhite"
            app:layout_constraintBottom_toBottomOf="@+id/tutorial_fragment_next_btn"
            app:layout_constraintEnd_toStartOf="@+id/tutorial_fragment_next_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tutorial_fragment_next_btn" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/tutorial_fragment_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_btn_bg"
            android:paddingLeft="@dimen/side_btn_padding"
            android:paddingRight="@dimen/side_btn_padding">

            <TextView
                android:id="@+id/tutorial_fragment_next_btn_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/next"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/tutorial_fragment_next_btn_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                app:layout_constraintBottom_toBottomOf="@+id/tutorial_fragment_next_btn_tv"
                app:layout_constraintStart_toEndOf="@+id/tutorial_fragment_next_btn_tv"
                app:layout_constraintTop_toTopOf="@+id/tutorial_fragment_next_btn_tv"
                app:srcCompat="@drawable/arrow_right2" />


        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>